<resources>
    <string name="app_name">tic tac toe</string>
    <string name="single_player">Single Player</string>
    <string name="active_player">Active Player</string>
    <string name="com">COM</string>
    <string name="you">YOU</string>
    <string name="two_players">Two Players</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="quit">QUIT</string>
    <string name="retry">CONTINUE</string>
    <string name="logo">logo</string>
    <string name="settings">Settings</string>
    <string name="three_game">3 by 3</string>
    <string name="five_game">5 by 5</string>
    <string name="players_names_3_char">Enter Name (3 char)</string>
    <string name="select_board_size">Select board size</string>
    <string name="tic">Tic</string>
    <string name="tac">Tac</string>
    <string name="toe">Toe</string>
    <string name="reset">reset</string>
</resources>
