<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/main_background"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/player_1_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/player_1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/player_2_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/player_2" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:typeface="sans"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:typeface="sans"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>