<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context="com.mawindavic.tictactoegame.StartActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="@drawable/main_background"
        android:contentDescription="@string/logo"
        android:fadingEdge="vertical|horizontal"
        android:fadingEdgeLength="5dp"
        android:padding="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/nav_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/nav_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/single_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/single_player_btn_background"
            android:text="@string/single_player"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            android:typeface="sans" />

        <Button
            android:id="@+id/two_players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/two_players_btn_background"
            android:text="@string/two_players"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            android:typeface="sans" />

        <Button
            android:id="@+id/settings_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/settings_btn_background"
            android:text="@string/settings"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            android:typeface="sans" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
